<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Commit</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="i_will">I will</string>
    <string name="every_day">every day.</string>
    <string name="remind_me">Remind me at</string>
    <string name="default_reminder_time">4:00 PM</string>
    <string name="commit">commit</string>
    <string name="forget">just in case I forget.</string>
    <string name="did_you">Did you</string>
    <string name="today">Today?</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="daysrow"><p><b>0</b> days in a row.</p></string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="no_reminder">No Reminder</string>
    <string name="dont_remind">Don\'t Remind Me</string>
    <string name="add_check">Add Check for Yesterday</string>
    <string name="delete_commitment">Delete Commitment</string>
    <string name="clear_notifications">Clear All Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="forgot_text">Did you Read yesterday, but not mark it in Commit?</string>
    <string name="what_time">What time would you like to be reminded?</string>
    <string name="settings_text">Commit keeps track of the notifications you receive. Click below to clear all notifications.</string>
    <string name="save">Save</string>
    <string name="notification_message">This is a notification for you</string>
    <string name="action_settings">Commit</string>
    

</resources>