<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CommitMain" 
    android:background="@drawable/comanback" >

  	 <LinearLayout
  	     android:id="@+id/cdetails"
  	     android:layout_width="260dp"
  	     android:layout_height="410dp"
  	     android:layout_centerInParent="true"
  	     android:layout_marginTop="71dp"
  	     android:background="@drawable/cback"
  	     android:orientation="vertical" >

	    
	    <TextView
	          android:id="@+id/rtime"
	          android:layout_width="200dp"
	          android:layout_height="wrap_content"
	          android:layout_marginTop="15dp"
	          android:layout_marginLeft="25dp"
	          android:text="@string/what_time"
	          android:textColor="#000000"
	          android:textSize="15sp" />
	    
	    <Button
	        android:id="@+id/dontr" 
	        android:layout_width="200dp"
	        android:layout_height="40dp"
	        android:text="@string/dont_remind"
	        android:textColor="#000000"
	        android:textSize="15sp"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="25dp"
	        android:background="@drawable/button_grey"/>

	    <TimePicker
	        android:id="@+id/timePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="15dp" />

	    <LinearLayout
	        android:layout_width="200dp"
  	     	android:layout_height="50dp"
  	     	android:layout_marginTop="15dp"
  	     	android:layout_marginLeft="15dp"
	        android:orientation="horizontal">
		    <Button
		        android:id="@+id/cancel"
		        android:layout_width="80dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:text="@string/cancel" />
		    <Button
		        android:id="@+id/save"
		        android:layout_width="80dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="30dp"
		        android:text="@string/save" />
	    </LinearLayout>
	    
	    

	</LinearLayout>

</RelativeLayout>